# podcasts

./: .pre-commit-config.yaml  Cargo.toml  Rocket.toml
migrations/: 20240819_initialize_table.sql
src/: main.rs
templates/: index.html  index.html.hbs
