[package]
name = "podcasts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["handlebars"] }
rocket_db_pools = { version = "0.2.0", features = ["sqlx_sqlite"] }
sqlx = { version = "*", features = [ "migrate" ]}
serde = { version = "1.0.208", features = ["derive"] }
